<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BierCaps</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_import_export">Import/Export DB</string>
    <string name="button_add_beer">Add Beer</string>
    <string name="button_statistics">Statistics</string>
    <string name="title_activity_add_beer">Add a new Beer</string>
    <string name="text_beer_name">NAME</string>
    <string name="text_beer_country">COUNTRY</string>
    <string name="text_beer_notes">NOTES</string>
    <string name="text_beer_rating">Rate this Beer !</string>
    <string name="text_beer_change_rating">CHANGE THE RATING!</string>
    <string name="dialog_delete_beer">Are you sure you want to delete this beer ? </string>
    <string name="dialog_yes">Yes !</string>
    <string name="dialog_no">No</string>
    <string name="dialog_what_you_want_to_do">What do you want to do ?</string>
    <string name="dialog_overwrite">Exported database found! Are you sure you want to overwrite the existing file ?</string>
    <string name="title_activity_beer_details">BeerDetails</string>
    <string name="title_activity_search">Searching...</string>
    <string name="detail_name">NAME</string>
    <string name="detail_country">COUNTRY</string>
    <string name="detail_notes">NOTES</string>
    <string name="detail_rating">RATING</string>
    <string name="go_back">Go back </string>
    <string name="edit_beer">Edit </string>
    <string name="title_activity_beer_edit">BeerEdit</string>
    <string name="save_changes">Save</string>
    <string name="dialog_are_you_sure">Are you sure you want to cancel edit ? The modified data will not be saved !</string>
    <string name="camera">Camera</string>
    <string name="search_hint">Search database</string>
    <string name="search_database">Searching</string>
    <string name="title_activity_search_results">searchResults</string>
    <string name="action_settings">Settings</string>

</resources>
