<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:background="@color/cream"
    tools:context="com.example.biercaps.BeerEdit" >

    <TextView
        android:id="@+id/textViewDetailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/dark_blue"
        android:text="@string/text_beer_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editBeerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:background="@drawable/round_corners_dark_blue"
        android:layout_below="@id/textViewDetailName"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/textViewDetailCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/dark_blue"
        android:layout_below="@id/editBeerName"
        android:layout_marginTop="10dp"
        android:text="@string/text_beer_country"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editBeerCountry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/round_corners_dark_blue"
        android:layout_below="@id/textViewDetailCountry"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewDetailNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editBeerCountry"
        android:gravity="center"
        android:textColor="@color/dark_blue"
        android:text="@string/text_beer_notes"
        android:textSize="25dp"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editBeerNotes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/round_corners_dark_blue"
        android:layout_below="@id/textViewDetailNotes"
        android:inputType="text" />

    <TextView
        android:id="@+id/editBeerRating"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/text_beer_change_rating"
        android:textColor="@color/dark_blue"
        android:paddingTop="10dp"
        android:textSize="25dp"
        android:layout_below="@id/editBeerNotes"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/editBeerRating">

        <RatingBar
            android:id="@+id/ratingBarEditBeer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="0.5" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/buttonGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_alignParentBottom="true"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/button_white_black"
            android:text="@string/go_back" />

        <Button
            android:id="@+id/buttonSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_alignParentBottom="true"
            android:textColor="#FFFFFF"
            android:layout_toRightOf="@id/buttonGoBack"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@drawable/button_white_black"
            android:text="@string/save_changes" />
    </LinearLayout>

</RelativeLayout>
